# todo-rust

./: .env.example  Cargo.toml  Dockerfile  README.md  compose.yaml
migrations/2024-12-28-122024_create_todo_tasks/: down.sql  up.sql
src/: handlers.rs  lib.rs  main.rs  models.rs  schema.rs
tests/: handlers_test.rs
