[package]
name = "todo-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-http = "3"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono", "time"] }
diesel_migrations = "2.2.0"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
